# CP-2

./: LICENSE  Python Cert Notes.docx  README.md  flake.nix  hello.py  pyproject.toml  sorty.py  template.py
Camel Remade/: camel.py  pyproject.toml
OOP Practice/: OOPPractice.py  pyproject.toml
Peer Reviews/: OOPpractice.py  emoji.py  hello.py  moveoji.py  pyproject.toml  testingcode.py
bouncing/: bounce.py  hello.py  pyproject.toml
emoji/: README.md  emoji.py  pyproject.toml
paystub/: assessment.py  hello.py  pyproject.toml
recursion/: main.py  pyproject.toml  reverseprint.py  sumdigits.py
spritey/: adventuregame.py  hello.py  oopsprite.py  pyproject.toml  spritey.py
strings/: pyproject.toml  testy.py
