[project]
name = "cp-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "bouncing",
 "emoji",
 "OOP Practice",
 "Camel Remade",
 "Peer Reviews",
 "spritey",
 "strings",
 "paystub",
 "recursion",
]
